# mailer_django_python27

./: .gitignore  README.md  db.sqlite3  pyproject.toml
app/: settings.py
apps/mailer/: apps.py  models.py  urls.py  views.py
apps/mailer/fixtures/: subscribers.json
apps/mailer/migrations/: 0001_initial.py
apps/mailer/templates/mailer/: index.html  mail_template.html
core/: settings.py  urls.py
