[tool.poetry]
name = "django_mailer"
version = "0.1.0"
description = ""
authors = ["Sergey Ovsyannikov <sergovs22@gmail.com>"]

[tool.poetry.dependencies]
python = "^2.7"
django = "1.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
